--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -39,6 +39,10 @@ jobs:
           registry: '${{ vars.GOOGLE_ARTIFACT }}'
           username: _json_key
           password: '${{ secrets.GOOGLE_CREDENTIALS }}'
+          
+      - name: New Relic License
+        run: |
+          sed -i "s/licensekey/${{ secrets.NEW_RELIC_LICENSE_KEY }}/g" Dockerfile
 
       - name: Build Image
         run: |
